# cangjie_compiler

./: CLAUDE.md  CMakeLists.txt  OAT.xml  README.OpenSource  build.py
src/: CMakeLists.txt
src/AST/: ASTContext.cpp  ASTTypeValidator.cpp  Clone.cpp  Create.cpp  Node.cpp  PrintNode.cpp  Query.cpp  RecoverDesugar.cpp  ScopeManagerApi.cpp  Searcher.cpp  Types.cpp  Utils.cpp
src/Basic/: DiagnosticEmitter.cpp  InteropCJPackageConfigReader.cpp  SourceManager.cpp  StringConvertor.cpp  Utils.cpp
src/CHIR/: CHIR.cpp  CHIRPrinter.cpp  Utils.cpp
src/CHIR/AST2CHIR/: AST2CHIR.cpp  AST2CHIRChecker.cpp  ASTPackage2CHIR.cpp  GlobalDeclAnalysis.cpp  GlobalVarInitializer.cpp  MarkClassHasInited.cpp  Utils.cpp
src/CHIR/Analysis/: ConstAnalysisWrapper.cpp  GetOrThrowResultAnalysis.cpp  ReachingDefinitionAnalysis.cpp  SIntDomain.cpp  TypeAnalysis.cpp
src/CHIR/Checker/: AnnotationChecker.cpp  CHIRChecker.cpp  ComputeAnnotations.cpp  VarInitCheck.cpp
src/CHIR/Expression/: Terminator.cpp
src/CHIR/GenerateVTable/: VTableGenerator.cpp  WrapVirtualFunc.cpp
src/CHIR/IR/: CHIRBuilder.cpp  CHIRContext.cpp  Package.cpp
src/CHIR/Interpreter/: BCHIRInterpreter.cpp  BCHIRLinker.cpp  CHIR2BCHIR.cpp
src/CHIR/NativeFFI/: TypeCastCheck.cpp  Utils.cpp  readme.md
src/CHIR/Optimization/: BlockGroupCopyHelper.cpp  DeadCodeElimination.cpp  Devirtualization.cpp  LambdaInline.cpp
src/CHIR/Serializer/: CHIRDeserializer.cpp  CHIRDeserializerImpl.h  CHIRSerializer.cpp
src/CHIR/Transformation/: BlockGroupCopyHelper.cpp  Devirtualization.cpp  RemoveUnusedImport.cpp
src/CHIR/Type/: ClassDef.cpp  CustomTypeDef.cpp  Type.cpp
src/CHIR/Utils/: Utils.cpp
src/CodeGen/: CGContext.h  CGContextImpl.cpp  CGContextImpl.h  CGModule.cpp  CGModule.h  CGPkgContext.cpp  CGPkgContext.h  DIBuilder.cpp  DIBuilder.h  EmitBasicBlockIR.cpp  EmitExpressionIR.cpp  EmitFunctionIR.cpp  EmitPackageIR.cpp  IRAttribute.h  IRBuilder.cpp  IRBuilder.h
src/CodeGen/Base/: AllocateImpl.cpp  ApplyImpl.cpp  ArithmeticOpImpl.cpp  ArrayImpl.cpp  CHIRExprWrapper.h  IntrinsicsDispatcher.cpp  IntrinsicsDispatcher.h  InvokeImpl.cpp  OverflowDispatcher.h  SpawnExprImpl.cpp  TupleExprImpl.cpp  TypeCastImpl.cpp  VArrayExprImpl.cpp
src/CodeGen/CJNative/: CGTypeInfo.cpp  CHIRSplitter.cpp  CJNativeCGCFFI.cpp  CJNativeCGCFFI.h  CJNativeDIBuilder.cpp  CJNativeGenMetadata.cpp  CJNativeIRBuilder.cpp  CJNativeIntrinsicsCall.cpp  CJNativeMetadata.h  EmitPackageIR.cpp
src/CodeGen/Utils/: CGCommonDef.h  CGUtils.cpp  CGUtils.h  Constants.h
src/ConditionalCompilation/: ConditionalCompilation.cpp  ConditionalCompilationImpl.h
src/Driver/: DriverOptions.cpp  Job.cpp  TempFileManager.cpp  Tool.cpp  ToolFuture.cpp  ToolOptions.cpp
src/Driver/Toolchains/: BackendOptions.inc  Gnu.cpp  Gnu.h  MachO.cpp
src/Frontend/: CompileStrategy.cpp  CompilerInstance.cpp  FrontendOptions.cpp
src/FrontendTool/: DefaultCompilerInstance.cpp  FrontendTool.cpp  IncrementalCompilerInstance.cpp
src/IncrementalCompilation/: ASTCacheCalculator.cpp  ASTDiff.cpp  CachedDataSerialization.cpp
src/Lex/: Lexer.cpp  LexerImpl.cpp  LexerImpl.h
src/Macro/: CMakeLists.txt  InvokeUtil.cpp  MacroEvaluation.cpp  MacroExpansion.cpp  MacroProcess.cpp  NodeSerialization.cpp  TestEntryConstructor.cpp
src/Mangle/: ASTMangler.cpp  BaseMangler.cpp  CHIRManglingUtils.cpp  CHIRTypeManglingUtils.cpp  Compression.cpp  Compression.h
src/Modules/: CjoManager.cpp  CjoManagerImpl.h  ImportManager.cpp  ModulesDiag.cpp  ModulesDiag.h
src/Modules/ASTSerialization/: ASTLoader.cpp  ASTLoaderImpl.h  ASTSerializeUtils.h  ASTWriter.cpp  ASTWriterImpl.h  ExprLoader.cpp  ReferenceLoader.cpp
src/Option/: CMakeLists.txt  Option.cpp  OptionAction.cpp
src/Parse/: ASTChecker.cpp  ASTHasher.cpp  AttachComment.cpp  MPParserImpl.h  ParseAnnotations.cpp  ParseAtom.cpp  ParseCJMPDecl.cpp  ParseDecl.cpp  ParseFeatures.cpp  ParseImports.cpp  ParseMacro.cpp  ParseModifiers.cpp  ParseQuote.cpp  Parser.cpp  ParserDiag.cpp  ParserImpl.cpp  ParserImpl.h  ParserModifierRules.cpp
src/Parse/NativeFFI/: FFIParserImpl.cpp  FFIParserImpl.h
src/Sema/: CMakeLists.txt  CheckAPILevel.cpp  CheckFunctionLinkage.cpp  CheckUnusedImportImpl.cpp  Collector.cpp  Collector.h  ConstEvaluationChecker.cpp  DeclAttributeChecker.cpp  Diags.cpp  Diags.h  LookUpImpl.cpp  PatternUsefulness.cpp  PluginCheck.cpp  PluginCheck.h  PreCheck.cpp  ScopeManager.cpp  TypeArgumentInference.cpp  TypeCheckAccess.cpp  TypeCheckAnnotation.cpp  TypeCheckBuiltinExpr.cpp  TypeCheckCall.cpp  TypeCheckClassLike.cpp  TypeCheckDecl.cpp  TypeCheckExtend.cpp  TypeCheckForLSP.cpp  TypeCheckMatchExpr.cpp  TypeCheckPattern.cpp  TypeCheckReference.cpp  TypeCheckType.cpp  TypeCheckUtil.cpp  TypeCheckUtil.h  TypeChecker.cpp  TypeCheckerImpl.h  TypeManager.cpp  Utils.cpp
src/Sema/CJMP/: CheckCJMP.cpp  CheckCJMPAnnotations.cpp  MPTypeCheckerImpl.h
src/Sema/Desugar/: AfterTypeCheck.cpp  DesugarAfterInstantiation.cpp
src/Sema/FFI/: CFFICheck.cpp
src/Sema/GenericInstantiation/: GenericInstantiationContext.cpp  GenericInstantiationManagerImpl.cpp  PartialInstantiation.cpp
src/Sema/InheritanceChecker/: InstantiatedChecker.cpp  MergeInheritedMemberHelper.cpp  StructInheritanceChecker.cpp  StructInheritanceChecker.h
src/Sema/LegalityOfUsage/: InitializationChecker.cpp
src/Sema/NativeFFI/: Utils.cpp  Utils.h
src/Sema/Plugin/: CMakeLists.txt  ParseJson.cpp  ParseJson.h  PluginCustomAnnoChecker.cpp  PluginCustomAnnoChecker.h
src/Sema/Test/: MockManager.cpp  (+6 more)
src/Utils/: CMakeLists.txt  FileUtil.cpp  Unicode.cpp
unittests/: CMakeLists.txt
unittests/AST/: SearchPlusTest.cpp  SearchTest.cpp
unittests/Basic/: EngineTest.cpp
unittests/CHIR/: CHIRDeSerialzierTest.cpp  CHIRSerialzierTest.cpp
unittests/CodeGen/: CGModuleTest.cpp
unittests/Demangle/: CMakeLists.txt  DemangleTest.cpp
unittests/Modules/: PackageTest.cpp
unittests/Option/: OptionTest.cpp
unittests/Parse/: ParseCommentTest2.cpp  ParserTest.cpp
unittests/TestCompilerInstance/: TestCompilerInstance.cpp  TestCompilerInstance.h
unittests/Utils/: CastASTTests.cpp  UtilsTests.cpp
(+283 files in other folders)
